Initial support for nanopc-t6
Signed-off-by: Naoto Yamaguchi <naoto.yamaguchi@aisin.co.jp>

--- a/meta-agl-demo-ces2024-ic/conf/layer.conf
+++ b/meta-agl-demo-ces2024-ic/conf/layer.conf
@@ -14,6 +14,8 @@ BBFILES_DYNAMIC += " \
     rcar-gen3:${LAYERDIR}/dynamic-layers/meta-rcar-gen3/*/*/*.bbappend \
     raspberrypi:${LAYERDIR}/dynamic-layers/meta-raspberrypi/*/*/*.bb \
     raspberrypi:${LAYERDIR}/dynamic-layers/meta-raspberrypi/*/*/*.bbappend \
+    rockchip:${LAYERDIR}/dynamic-layers/meta-rockchip/*/*/*.bb \
+    rockchip:${LAYERDIR}/dynamic-layers/meta-rockchip/*/*/*.bbappend \
 "
 
 # We do need psplash for guest images even we don't enable agldemo feature
